# nexloop-ai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  start_backend.ps1
alembic/: env.py
alembic/versions/: a7b2c3d4e5f6_add_user_profiles_and_ctr_feedback.py  c121533f78bf_sync_schema.py
docs/: presentation_qa.md
frontend/: .env.local  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: AdminAuditLogsClient.tsx  AdminRolesClient.tsx  AnalyticsSlugClient.tsx  AuthGate.tsx  ChatbotPanel.tsx  ChatbotWidget.tsx  DiscoverySearchClient.tsx  InsightsDashboardClient.tsx  PipelineSlugClient.tsx  Providers.tsx  StorageSlugClient.tsx
frontend/src/hooks/: useChatbotUsage.ts  usePipeline.ts  usePipelineHistory.ts
frontend/src/lib/: api.ts  dummyData.ts  (+2 more)
src/: app.py
src/api/: __init__.py  deps.py
src/config/: constants.py  dependencies.py  products.py  settings.py
src/core/: audit.py  exceptions.py  state.py
src/schemas/: requests.py  responses.py
src/services/: __init__.py  admin_service.py  auth_service.py  chatbot_service.py  comment_analysis_service.py  ctr_feedback_loop.py  ctr_predictor.py  data_collection_service.py  data_validator.py  export_service.py  history_service.py  hook_service.py  insight_external_service.py  insight_report_service.py  market_trend_service.py  marketing_service.py  model_evaluator.py  naver_service.py  pipeline_runner.py  pipeline_service.py  rag_ingestion_service.py  scheduler_service.py  social_service.py  studio_service.py  thumbnail_service.py  video_service.py  youtube_service.py
src/utils/: __init__.py  bloom_filter.py  cache.py  file_store.py  gcs_store.py  logger.py  rate_limit.py  retry.py
tests/: __init__.py  conftest.py  test_auth_service.py  test_ctr_predictor.py  test_data_validator.py  test_market_trend_service.py  test_model_evaluator.py  test_pipeline_models.py
tests/test_core/: __init__.py  test_exceptions.py
tests/test_services/: __init__.py  test_comment_analysis_service.py  test_marketing_service.py  test_naver_service.py  test_pipeline_service.py  test_youtube_service.py
(+131 files in other folders)
